add java basic